2014-02-04  Jakub Jelinek  <jakub@redhat.com>

	PR other/58712
	* omp-low.c (simd_clone_struct_copy): If from->inbranch
	is set, copy one less argument.
	(expand_simd_clones): Don't subtract clone_info->inbranch
	from simd_clone_struct_alloc argument.

	PR rtl-optimization/57915
	* recog.c (simplify_while_replacing): If all unary/binary/relational
	operation arguments are constant, attempt to simplify those.

	PR middle-end/59261
	* expmed.c (expand_mult): For MODE_VECTOR_INT multiplication
	if there is no vashl<mode>3 or ashl<mode>3 insn, skip_synth.

2014-02-04  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/60012
	* tree-vect-data-refs.c (vect_analyze_data_ref_dependence): Apply
	TBAA disambiguation to all DDRs.

2014-02-04  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	PR target/59788
	* config/sol2.h (LINK_LIBGCC_MAPFILE_SPEC): Define.
	(LINK_SPEC): Use it for -shared, -shared-libgcc.

2014-02-03  Jan Hubicka  <hubicka@ucw.cz>

	PR ipa/59882
	* tree.c (get_binfo_at_offset): Do not get confused by empty classes;

2014-02-03  Jan Hubicka  <hubicka@ucw.cz>

	* gimple-fold.c (gimple_extract_devirt_binfo_from_cst): Remove.
	* gimple-fold.h (gimple_extract_devirt_binfo_from_cst): Remove.

2014-02-03  Jan Hubicka  <hubicka@ucw.cz>

	PR ipa/59831
	* ipa-cp.c (ipa_get_indirect_edge_target_1): Use ipa-devirt
	to figure out targets of polymorphic calls with known decl.
	* ipa-prop.c (try_make_edge_direct_virtual_call): Likewise.
	* ipa-utils.h (get_polymorphic_call_info_from_invariant): Declare.
	* ipa-devirt.c (get_polymorphic_call_info_for_decl): Break out from ...
	(get_polymorphic_call_info): ... here.
	(get_polymorphic_call_info_from_invariant): New function.

2014-02-03  Jan Hubicka  <hubicka@ucw.cz>

	* ipa-cp.c (ipa_get_indirect_edge_target_1): Do direct
	lookup via vtable pointer; check for type consistency
	and turn inconsitent facts into UNREACHABLE.
	* ipa-prop.c (try_make_edge_direct_virtual_call): Likewise.